--- a/auth-server/build.gradle
+++ b/auth-server/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.0.RELEASE'
+		springBootVersion = '2.0.2.RELEASE'
+		springCloudVersion = 'Finchley.RC1'
 	}
 	repositories {
 		mavenCentral()
@@ -22,11 +23,6 @@ sourceCompatibility = 1.8
 repositories {
 	mavenCentral()
 	maven { url "https://repo.spring.io/milestone" }
-}
-
-
-ext {
-	springCloudVersion = 'Finchley.M9'
 }
 
 dependencies {
